# MCUDev

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Libraries/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Projects/: CMakeLists.txt
Projects/STM32F103-c8t6/: CMakeLists.txt
Projects/STM32F103-c8t6/lib/: CMakeLists.txt
Projects/STM32F103-nano/: CMakeLists.txt
Projects/STM32F103-nano/Application/Inc/: main.h  sys.h
Projects/STM32F103-nano/Application/Inc/Hardware/: LED.h
Projects/STM32F103-nano/Application/Src/: delay.c  main.c  sys.c
Projects/STM32F103-nano/Application/Src/Hardware/: LED.c
Projects/STM32F103-nano/lib/: CMakeLists.txt
Projects/STM32F407-explorer/: CMakeLists.txt
Projects/STM32F407-tkx/: CMakeLists.txt
Projects/STM32F407-tkx/Application/Inc/: main.h
Projects/STM32F407-tkx/Application/Src/: main.c
Projects/STM32F407-tkx/lib/: CMakeLists.txt
STM32F103RCT6/: CMakeLists.txt
STM32F103RCT6/Application/: led.c  led.h  main.c
STM32F103RCT6/Application/delay/: delay.c  delay.h
STM32F103RCT6/Application/sys/: sys.c  sys.h
STM32F103RCT6/cmake/: mcu-config.cmake
STM32F407VGT6/: CMakeLists.txt
STM32F407VGT6/Application/: main.c
STM32F407VGT6/Core/: stm32f4xx_it.c
STM32F407VGT6/cmake/: mcu-config.cmake
cmake/: STM32F103C8T6_config.cmake  STM32F103RCT6_config.cmake  STM32F407VGT6_config.cmake  stm32-toolchain.cmake
ld/stm32f4/: STM32F407XX_FLASH.ld
template/STM32F103C8T6/: CMakeLists.txt
template/STM32F103C8T6/lib/: CMakeLists.txt
